--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "open-term",
-  "version": "1.1.6",
-  "description": "Start command in new terminal.",
+  "version": "1.1.7",
+  "description": "Start command in a new terminal and see the output.",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "private": false,
@@ -13,6 +13,7 @@
   },
   "keywords": [
     "open terminal",
+    "openterm",
     "terminal",
     "virtual terminal",
     "terminal emulator"
